fix topbar overflow

--- a/eatraid/Frontend/src/app/verify/verify.module.css
+++ b/eatraid/Frontend/src/app/verify/verify.module.css
@@ -7,7 +7,7 @@
 
 .bg {
     width: 100%;
-    height: calc(100% - 3rem);
+    height: calc(100% - 3.5rem);
     display: flex;
     flex-direction: column;
     justify-content: center; 
